--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
     - 7.1
 
 before_script:
-    - composer install --dev
+    - composer install
 
 script:
     - vendor/bin/phpunit -c phpunit.xml --coverage-clover=coverage.xml
