--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         }
     },
     "require": {
-        "php": ">=5.6,<7",
+        "php": ">=5.6",
         "puzzle/pieces": "~2.2",
         "ramsey/uuid": "~3.6",
         "symfony/validator" : "~3.2"
