--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
         }
     },
     "require": {
-        "php": ">=7.1",
-        "puzzle/pieces": "~2.2",
-        "ramsey/uuid": "~3.6",
-        "symfony/validator" : "~3.2"
+        "php": ">=7.2",
+        "puzzle/pieces": "dev-clb-sf5@dev",
+        "ramsey/uuid": "^4.0",
+        "symfony/validator" : "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.3"
