--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,12 @@
         }
     },
     "require": {
-        "php": ">=7.1",
+        "php": "^8.1",
         "puzzle/pieces": "~2.2",
-        "ramsey/uuid": "~3.6",
-        "symfony/validator" : "~3.2"
+        "ramsey/uuid": "^4.3",
+        "symfony/validator" : "^4.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.3"
+        "phpunit/phpunit": "~9.0"
     }
 }
